@@ -342,7 +342,7 @@ SCIP_RETCODE execmain(int argc, const char **argv)
         }
         if (index > 0)
         {
-
+            SCIP_CALL(SCIPsetLongintParam(scip, "heuristics/completesol/nodesofs", 1000)); // default 500
             if (index > 4)
             {
                 // Tune some parameters after a delay.
@@ -491,10 +491,10 @@ SCIP_RETCODE execmain(int argc, const char **argv)
                 branching_stats[name].n_calls += n_calls;
                 branching_stats[name].time_spent += time_spent;
                 // TODO Remove this?
-                std::cout << name
-                          << " " << n_calls
-                          << " time " << time_spent
-                          << endl;
+                // std::cout << name
+                //           << " " << n_calls
+                //           << " time " << time_spent
+                //           << endl;
             }
         }
 
