@@ -110,10 +110,11 @@ scip v 8.0.3
 back to scip v 8.0.2
 --- 26 jan base full ---
 Conditional compilation in mipcomp.sh
+completesol heuristic nodesofs to 1000 (default 500)
+
 
 TODOs
 
-if full strong branching does not work, try more strong branching in reliability branching
 
 
 
